Refactor file upload handling and improve CSV processing; streamline metrics calculation for sensitive attributes

--- a/bias_buster/app/templates/check.html
+++ b/bias_buster/app/templates/check.html
@@ -53,7 +53,7 @@
                     <img src="{% static 'images/upload-icon.png' %}" alt="Upload Icon" class="upload-image">
                     <p class="click-up">Click to upload your file</p>
                 </label>
-                <input id="file-upload" type="file" name="file" class="file-input" accept=".csv, .xlsx, .xls, .json, .txt, .parquet, .feather, .pickle, .pkl, .dta, .sav, .sas7bdat, .spss, .dta, .rdata, .rda" required>
+                <input id="file-upload" type="file" name="file" class="file-input" accept=".csv" required>
                 </div>
                 <button type="submit" class="upload-button">Upload</button>
             </form>
