--- a/bias_buster/app/templates/check.html
+++ b/bias_buster/app/templates/check.html
@@ -50,7 +50,7 @@
                 {% csrf_token %}
                 <div class="upload-box">
                 <label for="file-upload" class="upload-image-label">
-                    <img src="{% static 'images/upload-icon.png' %}" alt="Upload Icon" class="upload-image">
+                    <img src="{% static 'images/image.png' %}" alt="Upload Icon" class="upload-image">
                     <p class="click-up">Click to upload your file</p>
                 </label>
                 <input id="file-upload" type="file" name="file" class="file-input" accept=".csv" required>
