--- a/bias_buster/app/templates/check.html
+++ b/bias_buster/app/templates/check.html
@@ -5,7 +5,11 @@
 
         <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
         <meta charset="UTF-8">
-        <link rel="script" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      </script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
 
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
